Trying to fix spacing between title and text

--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -53,6 +53,7 @@
 
   .archive__item-title {
     margin-top: 1em;
+    margin-bottom: 0em;
     border-bottom: none;
   }
 }
